--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -515,6 +515,7 @@ section div.container div.row div.col-md-6.mt16 em {
 }
 /* OPC Überschreiben überschrift "Spendenhöhe" */
 /* Breich Mitgliedschaften */
+/* better Solution via JS and replace text, soon replaced by Odoo o8r68 Backend Solution
 body[data-catid="2"] .ppt_opc #wsd_checkout_form > div > h3 > span {
   display: none;
 }
@@ -522,6 +523,7 @@ body[data-catid="2"] .ppt_opc #wsd_checkout_form > div > h3:after {
   content: 'Jährliche Beitragshöhe';
     font-size: 35px;
 }
+*/
 /* Login Buttons */
 #top_menu > li.divider {
   display: none;
@@ -533,3 +535,9 @@ body[data-catid="2"] .ppt_opc #wsd_checkout_form > div > h3:after {
   display: none;
 }
 /* Login buttons end */
+/* Shopping Cart Mini Icon */
+  .fa-shopping-cart:before {
+    /*content: "\f16b";*/
+    content: "\f004";
+
+  }
