[ADD] changed some css behaviors for ticket zendesk 3769 difference bettween main and footer

--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -384,7 +384,10 @@ footer a {
 }
 footer a:hover, a:focus {
     /*color: #0f921a;*/
-    mix-blend-mode: difference;
+    /*mix-blend-mode: difference;*/
+    color: white;
+}
+main a:hover, a:focus {
     color: black;
 }
 
