--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -480,9 +480,11 @@ section div.container div.row div.col-md-6.mt16 em {
     width: 450px;
     margin: auto;
 }
+
 @media only screen and (min-device-width: 768px) {
-    section div.container div.row div.col-md-6.mt16 {
-        display: grid;
+    section div.container div.row div>img {
+        display: block;
+        width: 100%;
     }
 }
 
