--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -484,7 +484,7 @@ section div.container div.row div.col-md-6.mt16 em {
 @media only screen and (min-device-width: 768px) {
     section div.container div.row div>img {
         display: block;
-        width: 100%;
+        width: auto;
     }
 }
 
