[FIX] fix options Menü to be shown also on extended banner, fix sizing for opc product_price

--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -42,7 +42,10 @@ auf die Größe des Iframes und nicht auf die darüberliegende Seitengröße.
 /* --------------- */
 /* EXTENDED DESIGN */
 /* --------------- */
-
+.oe_overlay .oe_overlay_options {
+    top: 20px !important;
+    /*z-index: 9999 !important;*/
+}
 /* Links */
 /*a { text-decoration: underline; }*/
 /*a:hover { background-color: #3f3f3f; }*/
@@ -515,11 +518,15 @@ section div.container div.row div.col-md-6.mt16 em {
     text-align: center;
 }
 
-.ppt_opc #website_sale_donate .oe_price_h4 {
-    width: 20%;
+.product_price {
+    width: fit-content;
     margin: auto;
+}
+.ppt_opc #website_sale_donate .oe_price_h4 {
+    /*width: 20%;*/
+    /*margin: auto;*/
     background-color: white;
-    border: 1px solid #ccc;
+    /*border: 1px solid #ccc;*/
     border-radius: 5px;
     padding: 5px;
 }
