--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -42,9 +42,8 @@ auf die Größe des Iframes und nicht auf die darüberliegende Seitengröße.
 /* --------------- */
 /* EXTENDED DESIGN */
 /* --------------- */
-.oe_overlay .oe_overlay_options {
-    top: 20px !important;
-    /*z-index: 9999 !important;*/
+#wrapwrap main #wrap[contenteditable='true'] .extended_banner.move-into-header {
+    top: 40px;
 }
 /* Links */
 /*a { text-decoration: underline; }*/
